[package]
       name = "libasm_tester"
    version = "0.1.0"
    authors = ["Jonathan DUFOUR"]
    edition = "2021"
description = "A bunch of tests for the libasm project of the 42 School"

[dependencies]
constcat = "0.6.0"
   errno = "0.3.9"
    libc = "0.2.159"
    rand = "0.9.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
   name = "strdup"
harness = false

[[bench]]
   name = "strlen"
harness = false

[[bench]]
   name = "strcmp"
harness = false

[[bench]]
   name = "strcpy"
harness = false

[[bench]]
   name = "memcpy"
harness = false
