[package]
       name = "libasm_tester"
    version = "0.1.0"
    authors = ["Jonathan DUFOUR"]
    edition = "2021"
description = "A bunch of tests for the libasm project of the 42 School"

[dependencies]
constcat = "0.6.1"
   errno = "0.3.13"
    libc = "0.2.174"
    rand = "0.9.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
   name = "memcmp"
harness = false

[[bench]]
   name = "memcpy"
harness = false

[[bench]]
   name = "strdup"
harness = false

[[bench]]
   name = "strlen"
harness = false

[[bench]]
   name = "strcmp"
harness = false

[[bench]]
   name = "strcpy"
harness = false
